# advent-of-code

2023/: Cargo.toml
2023/common/src/: lib.rs
2023/day-01/src/: main.rs
2023/day-02/src/: main.rs
2023/day-03/src/: main.rs
2023/day-04/src/: main.rs
2023/day-05/src/: main.rs
2023/day-06/: Cargo.toml
2023/day-06/src/: main.rs
2023/day-07/: Cargo.toml
2023/day-07/src/: main.rs
2023/day-08/: Cargo.toml
2023/day-08/src/: main.rs
2024/: .gitignore  Cargo.toml
2024/src/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  main.rs
