[package]
name = "advent2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bitvec = "1.0.1"
clap = { version = "4.5.21", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
itertools = "0.13.0"
paste = "1.0.15"
rayon = "1.10.0"
regex = "1.11.1"
